[MATRIX-57] decrypt user secret using credential service (#804)