@@ -7,6 +7,8 @@ package io.confluent.flink.table.modules.ml;
 import org.apache.flink.configuration.ConfigOption;
 import org.apache.flink.configuration.ConfigOptions;
 
+import org.apache.flink.shaded.guava31.com.google.common.collect.ImmutableSet;
+
 import java.util.Set;
 
 import static io.confluent.flink.table.modules.ml.MLModelCommonConstants.PARAMS_PREFIX;
@@ -33,9 +35,11 @@ public class OpenAIRemoteModelOptions extends RemoteModelOptions {
                     .noDefaultValue()
                     .withDescription("The system prompt for the OpenAI model.");
 
-    private final Set<ConfigOption<?>> requiredProviderLevelOptions = Set.of(API_KEY, ENDPOINT);
-    private final Set<ConfigOption<?>> optionalProviderLevelOptions = Set.of(SYSTEM_PROMPT);
-    private final Set<ConfigOption<?>> secrets = Set.of(API_KEY);
+    private final Set<ConfigOption<?>> requiredProviderLevelOptions =
+            ImmutableSet.of(API_KEY, ENDPOINT);
+    private final Set<ConfigOption<?>> optionalProviderLevelOptions =
+            ImmutableSet.of(SYSTEM_PROMPT);
+    private final Set<ConfigOption<?>> secrets = ImmutableSet.of(API_KEY);
     private final String paramsPrefix = NAMESPACE + "." + PARAMS_PREFIX;
 
     @Override
