@@ -7,10 +7,11 @@ package io.confluent.flink.table.modules.ml;
 import org.apache.flink.configuration.ConfigOption;
 import org.apache.flink.configuration.ConfigOptions;
 
+import org.apache.flink.shaded.guava31.com.google.common.collect.ImmutableSet;
+
 import java.util.Set;
 
 import static io.confluent.flink.table.modules.ml.MLModelCommonConstants.PARAMS_PREFIX;
-import static io.confluent.flink.table.modules.ml.MLModelCommonConstants.SERVICE_KEY;
 
 /** Options for VertexAI remote model. */
 public class VertexAIRemoteModelOptions extends RemoteModelOptions {
@@ -34,9 +35,11 @@ public class VertexAIRemoteModelOptions extends RemoteModelOptions {
                     .noDefaultValue()
                     .withDescription("The system prompt for the VertexAI model.");
 
-    private final Set<ConfigOption<?>> requiredProviderLevelOptions = Set.of(SERVICE_KEY, ENDPOINT);
-    private final Set<ConfigOption<?>> optionalProviderLevelOptions = Set.of(SYSTEM_PROMPT);
-    private final Set<ConfigOption<?>> secrets = Set.of(SERVICE_KEY);
+    private final Set<ConfigOption<?>> requiredProviderLevelOptions =
+            ImmutableSet.of(SERVICE_KEY, ENDPOINT);
+    private final Set<ConfigOption<?>> optionalProviderLevelOptions =
+            ImmutableSet.of(SYSTEM_PROMPT);
+    private final Set<ConfigOption<?>> secrets = ImmutableSet.of(SERVICE_KEY);
     private final String paramsPrefix = NAMESPACE + "." + PARAMS_PREFIX;
 
     @Override
